MCR-3433 add tests for resource providers, locators, filters and selectors